2005-03-07 Magnus Hagdorn
 * glimmer_ncio.f90: fixed bug #110

2005-03-07 Magnus Hagdorn
 * glide_thck.f90: only print warning about empty thck field when compiled with -DDEBUG
 * glide_launch.py: write extra fields to result file, date, glimmer version, glimmer FCFLAGS
 * add simple test directory
 * configure.in: change default behaviour of FCFLAGS (now empty instead of -g), hook up tests
 * INSTALL: mention tests directory

2005-03-04 Magnus Hagdorn
 * glint_example.f90: renamed program to glint_example, fixed minor prob 
   with NAG f95 compiler

2005-03-03 Ian Rutt
 * Fixed array sized bug with glint orography output
 * New glint_example code - uses ncep-reanalysis-derived climatology 

2005-03-03 Magnus Hagdorn
 * added glide launcher utility

2005-03-03 Magnus Hagdorn
 * glide_thck.f90: move flwa calcs up in lin solver
 * glide_types.f90: make size of arrays on velo grid 1 less than
   size of arrays on temp grid
 * glide_vars.def: remove f95 array sections (since arrays are right size now)
 * glide_velo.f90: reduce array size of some work arrays, simplify where loops

2005-03-01 Magnus Hagdorn
 * glide_velo.f90: new subroutine for handling vetical velo in case of periodic EW BC
 * glide_temp.f90: hooked up this subroutine
 * glide_thck.f90: modified BC for periodic BC
 * documented the lot

2005-03-01 Magnus Hagdorn
 * documentation gets version from configure
 * glide_velo.f90: fixed bug with loop over grid and avoid unnecessary memory allocation

2005-03-01 Ian Rutt
 * Removed redundant paramfiles.tex from doc/ug
 * Removed a couple of redundent components from glint
 * Hopefully fixed up hotstarts for glint (only a sinlge array needs to be written)
	
2005-02-29 Ian Rutt
 * Updated docs to match new GLINT API
 * Added additional underscore control code substitution to parts of LaTeX
   autogeneration in generate_ncvars.py

2005-02-28 Magnus Hagdorn
 * updated documentation