@@ -63,9 +63,9 @@ spoty:     70 10 30 100
 comment:   spots are taken at nodes
 
 [CF output]
-name:      g_land.1000a.nc
-frequency: 1000
-variables: thk topg ablt acab arng bmlt btemp btrc diffu usurf
+name:      g_land.10a.nc
+frequency: 10
+variables: glint_prcp glint_acab glint_ablt glint_artm global_orog local_orog acab glint_thk thk
 
 [CF input]
 name: g_land.input.nc
